Getting ExcelWriter working without a context manager

--- a/1-Data_Prep.ipynb
+++ b/1-Data_Prep.ipynb
@@ -6806,8 +6806,31 @@
    "outputs": [],
    "source": [
     "# # why doesn't this work???\n",
-    "# writer = pd.ExcelWriter(output_file2)\n",
-    "# final_data.to_excel(writer, index = False, sheet_name=\"final_data\")"
+    "writer = pd.ExcelWriter(output_file2)\n",
+    "final_data.to_excel(writer, index = False, sheet_name=\"final_data\")\n",
+    "\"\"\"\n",
+    "Solution 1 - Enable original code to work:\n",
+    "  1. Need to add `writer.close()`.\n",
+    "  2. Based on the documentation here: https://pandas.pydata.org/docs/reference/api/pandas.ExcelWriter.html\n",
+    "  3. i.e. \"... Otherwise, call close() to save and close any opened file handles.\"\n",
+    "\"\"\"\n",
+    "writer.close() # <-- need to close\n",
+    "\n",
+    "\"\"\"\n",
+    "Solution 2 - Alternate solution using Context Manager.\n",
+    "  1. Before going any further, note that context manager might be a\n",
+    "     new (advance) concept to grasp. Just know how to use it for now.\n",
+    "  2. But basically, it handles the \"open()\" and \"close()\" of classes.\n",
+    "  3. Note the solution below doesn't need for you to add `writer.close()`.\n",
+    "  4. As a best practice, and as per documentation, using a Context Manager is\n",
+    "     good: \"The writer should be used as a context manager. ...\"\n",
+    "\"\"\"\n",
+    "with pd.ExcelWriter(\"data/processed/using_context_manager.xlsx\") as writer_cm:\n",
+    "    final_data.to_excel(writer_cm)\n",
+    "\n",
+    "\"\"\"\n",
+    "Oh, just noticed, yes the solution below uses a context manager :thumbs_up:\n",
+    "\"\"\""
    ]
   },
   {
