Fix file path referencing

--- a/1-Data_Prep.ipynb
+++ b/1-Data_Prep.ipynb
@@ -48,9 +48,9 @@
    "outputs": [],
    "source": [
     "today = datetime.today()\n",
-    "src_file = Path.cwd() / \"data\" / \"raw\" / \"customer_master.xlsx\"\n",
-    "output_file = Path.cwd() / \"data\" / \"processed\" / \"customer_processed.xlsx\"\n",
-    "output_file2 = Path.cwd() / \"data\" / \"processed\" / \"customer_processed2.xlsx\""
+    "src_file = Path.joinpath(Path.cwd(), \"data/raw/customer_master.xlsx\")\n",
+    "output_file = Path.joinpath(Path.cwd(), \"data/processed/customer_processed.xlsx\")\n",
+    "output_file2 = Path.joinpath(Path.cwd(), \"data/processed/customer_processed2.xlsx\")"
    ]
   },
   {
