Solution for Number Formatting issue

--- a/1-Data_Prep.ipynb
+++ b/1-Data_Prep.ipynb
@@ -6845,6 +6845,49 @@
     "#     writer.sheets['final_data'].set_column('C:C',14, numformat) ###cant give me correct format, only bold\n",
     "#     writer.sheets['final_data'].set_column('D:D',28)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [],
+   "source": [
+    "# Predefine \"fixed\" variables for re-usability\n",
+    "temp = \"data/processed/customer_processed2__formatted.xlsx\"\n",
+    "sheet_name = \"final_data\"\n",
+    "\n",
+    "with pd.ExcelWriter(temp, engine=\"xlsxwriter\") as writer:\n",
+    "    final_data.to_excel(writer, index = False, sheet_name=sheet_name)\n",
+    "\n",
+    "    # Working with pandas, according to docs:\n",
+    "    # https://xlsxwriter.readthedocs.io/working_with_pandas.html\n",
+    "    # Get the xlsxwriter objects from the dataframe writer object.\n",
+    "    # FYI only: Type Hint used here, helps IDE with autocompletion/method suggestions\n",
+    "    # For more on type-hinting: https://realpython.com/lessons/type-hinting/\n",
+    "    workbook: xlsxwriter.workbook.Workbook = writer.book\n",
+    "    worksheet: xlsxwriter.worksheet.Worksheet = writer.sheets[sheet_name]\n",
+    "\n",
+    "    # Define your number format, according to docs:\n",
+    "    # https://xlsxwriter.readthedocs.io/workbook.html#add_format\n",
+    "    # Specifically for num_format, for the available \"Format String\" see (e.g. \"#,##0.00\"):\n",
+    "    # https://xlsxwriter.readthedocs.io/format.html#set_num_format\n",
+    "    # FYI only: There's also another valid way to define specific formats\n",
+    "    #           like \"workbook.add_format().set_num_format('#,##0.00')\".\n",
+    "    #           Advise to ignore for now to avoid confusion.\n",
+    "    # FYI only: Other types of format methods/properties available:\n",
+    "    #           https://xlsxwriter.readthedocs.io/format.html#format-methods-and-format-properties\n",
+    "    num_format = workbook.add_format({'num_format': '#,##0.00'})\n",
+    "\n",
+    "    # Set (specific) column width and or format following docs:\n",
+    "    # https://xlsxwriter.readthedocs.io/worksheet.html#set_column\n",
+    "    worksheet.set_column('C:C',14, num_format)\n",
+    "    worksheet.set_column('D:D',28)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
