Better type-hint info link

--- a/1-Data_Prep.ipynb
+++ b/1-Data_Prep.ipynb
@@ -6862,7 +6862,7 @@
     "    # https://xlsxwriter.readthedocs.io/working_with_pandas.html\n",
     "    # Get the xlsxwriter objects from the dataframe writer object.\n",
     "    # FYI only: Type Hint used here, helps IDE with autocompletion/method suggestions\n",
-    "    # For more on type-hinting: https://realpython.com/lessons/type-hinting/\n",
+    "    # For more on type-hinting: https://www.infoworld.com/article/3630372/get-started-with-python-type-hints.html\n",
     "    workbook: xlsxwriter.workbook.Workbook = writer.book\n",
     "    worksheet: xlsxwriter.worksheet.Worksheet = writer.sheets[sheet_name]\n",
     "\n",
